[tool.poetry]
name = "connector_slack"
version = "0.1.0"
description = "Send messages to Slack through a SpiffWorkflow Service Task"
authors = ["Dan Funk <dan@sartography.com>"]
readme = "README.md"
packages = [{include = "connector_slack", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
